--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+# Trained model
+model/best.onnx
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# PyCharm
+.idea/
+
 # Logs
 logs
 *.log
