--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "main.js",
   "dependencies": {
     "boolean": "^3.2.0",
+    "bootstrap": "^5.2.1",
     "buffer-crc32": "^0.2.13",
     "cacheable-request": "^6.1.0",
     "clone-response": "^1.0.3",
@@ -39,6 +40,7 @@
     "has-symbols": "^1.0.3",
     "http-cache-semantics": "^4.1.0",
     "ini": "^1.3.8",
+    "jquery": "^3.6.1",
     "json-buffer": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
     "jsonfile": "^4.0.0",
