--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "escape-string-regexp": "^4.0.0",
     "extract-zip": "^2.0.1",
     "fd-slicer": "^1.1.0",
+    "file-saver": "^2.0.5",
     "fs-extra": "^8.1.0",
     "function-bind": "^1.1.1",
     "get-intrinsic": "^1.1.3",
