--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "object-keys": "^1.1.1",
     "once": "^1.4.0",
     "p-cancelable": "^1.1.0",
+    "path": "^0.12.7",
     "pend": "^1.2.0",
     "pify": "^3.0.0",
     "prepend-http": "^2.0.0",
